workspace-sf/force-app/main/default/objects/BCP_Log__c/BCP_Log__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar informações do log da BCP (Base Corporativa de Pessoas)
Objeto criado para as demandas do projeto Reestímulo BCP</description>
    <label>Log BCP</label>
    <nameField>
        <displayFormat>LogBCP-{000000}</displayFormat>
        <label>Código Log BCP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs BCP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>