workspace-sf/force-app/main/default/objects/BCP_Log__c/fields/BCP_Contrato__c.field-meta.xml
<CustomField>
    <fullName>BCP_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento de pesquisa entre log BCP e Contrato para a qual foi criada</description>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Logs BCP</relationshipLabel>
    <relationshipName>Logs_BCP</relationshipName>
    <type>Lookup</type>
</CustomField>