workspace-sf/force-app/main/default/objects/BCP_Log__c/fields/BCP_DataHoraEnvio__c.field-meta.xml
<CustomField>
    <fullName>BCP_DataHoraEnvio__c</fullName>
    <description>Data/Hora na qual o payload foi enviado para a BCP via integração CIV</description>
    <label>Data/Hora Envio</label>
    <type>DateTime</type>
</CustomField>