workspace-sf/force-app/main/default/objects/BCP_Log__c/fields/BCP_DataHoraRetorno__c.field-meta.xml
<CustomField>
    <fullName>BCP_DataHoraRetorno__c</fullName>
    <description>Data/Hora de recebimento do retorno da BCP via integração CIV com API nativa</description>
    <label>Data/Hora Retorno</label>
    <type>DateTime</type>
</CustomField>