workspace-sf/force-app/main/default/objects/BCP_Log__c/fields/BCP_Descricao__c.field-meta.xml
<CustomField>
    <fullName>BCP_Descricao__c</fullName>
    <description>Texto com a descrição do retorno da chamada BCP recebido pela CIV</description>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>