workspace-sf/force-app/main/default/objects/BCP_Log__c/fields/BCP_Status__c.field-meta.xml
<CustomField>
    <fullName>BCP_Status__c</fullName>
    <description>Campo para armazenar Status de retorno da chamada CIV/API</description>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>